bindings/c/include/proven.h

/** @brief Result for boolean operations */
typedef struct { int32_t status; bool value; } ProvenBoolResult;
/**
 * @brief Result for string operations.
 * @note Caller must free value using proven_free_string().
 */
typedef struct { int32_t status; char* value; size_t length; } ProvenStringResult;
/** @brief Result for floating-point operations */
typedef struct { int32_t status; double value; } ProvenFloatResult;
/* ============================================================================
 * SafeHeader - HTTP header safety (6 functions)
 * ============================================================================ */

/**
 * @brief Check for CRLF injection characters in header value.
 * @return Result with detection status (true = CRLF found).
 */
ProvenBoolResult proven_header_has_crlf(const uint8_t* ptr, size_t len);
/**
 * @brief Check if header name is a valid token per RFC 7230.
 * @return Result with validation status.
 */
ProvenBoolResult proven_header_is_valid_name(const uint8_t* ptr, size_t len);
/**
 * @brief Check if header name is in the dangerous headers list.
 * @return Result with detection status (true = dangerous).
 */
ProvenBoolResult proven_header_is_dangerous(const uint8_t* ptr, size_t len);
/**
 * @brief Check for cookie injection characters (semicolon, CR, LF).
 * @return Result with detection status (true = injection found).
 */
ProvenBoolResult proven_cookie_has_injection(const uint8_t* ptr, size_t len);
/**
 * @brief Validate cookie name.
 * @return Result with validation status.
 */
ProvenBoolResult proven_cookie_validate_name(const uint8_t* ptr, size_t len);
/**
 * @brief Validate cookie value.
 * @return Result with validation status.
 */
ProvenBoolResult proven_cookie_validate_value(const uint8_t* ptr, size_t len);
/* ============================================================================
 * SafePassword - Password validation (2 functions)
 * ============================================================================ */

/** @brief Password strength level. */
typedef enum {
    PROVEN_PASSWORD_VERY_WEAK  = 0,
    PROVEN_PASSWORD_WEAK       = 1,
    PROVEN_PASSWORD_FAIR       = 2,
    PROVEN_PASSWORD_STRONG     = 3,
    PROVEN_PASSWORD_VERY_STRONG = 4
} ProvenPasswordStrength;
/** @brief Password validation result. */
typedef struct {
    ProvenPasswordStrength strength;
    bool   has_lowercase;
    bool   has_uppercase;
    bool   has_digit;
    bool   has_special;
    size_t length;
} ProvenPasswordResult;
/**
 * @brief Validate password strength.
 * @return Password validation result with strength and character class flags.
 */
ProvenPasswordResult proven_password_validate(const uint8_t* ptr, size_t len);
/**
 * @brief Check if password is in common passwords list.
 * @return true if password appears in the common list.
 */
bool proven_password_is_common(const uint8_t* ptr, size_t len);
/* ============================================================================
 * SafePhone - E.164 phone number handling (2 functions)
 * ============================================================================ */

/** @brief Phone number parse result. */
typedef struct {
    int32_t  status;
    uint16_t country_code;
    uint64_t national_number;
    bool     is_valid;
} ProvenPhoneResult;
/**
 * @brief Parse phone number to E.164 format.
 * @return Result with parsed phone number.
 */
ProvenPhoneResult proven_phone_parse(const uint8_t* ptr, size_t len);
/* ============================================================================
 * SafeCalculator - Safe expression evaluation (1 function)
 * ============================================================================ */

/**
 * @brief Evaluate an arithmetic expression safely.
 *
 * Supports +, -, *, /, parentheses, negative and decimal numbers.
 * Returns PROVEN_ERR_PARSE_FAILURE for invalid expressions.
 * Returns PROVEN_ERR_DIVISION_BY_ZERO for division by zero.
 */
ProvenFloatResult proven_calculator_eval(const uint8_t* ptr, size_t len);
/** @brief Sigmoid function: 1 / (1 + exp(-x)). */
double proven_ml_sigmoid(double x);
/** @brief ReLU function: max(0, x). */
double proven_ml_relu(double x);
/** @brief Leaky ReLU: x >= 0 ? x : alpha * x. */
double proven_ml_leaky_relu(double x, double alpha);
/** @brief Clamp value to [min_val, max_val]. */
double proven_ml_clamp(double x, double min_val, double max_val);
/* ============================================================================
 * SafeHttp - HTTP URL encoding and header parsing (3 functions)
 * ============================================================================ */

/**
 * @brief URL-encode a string (RFC 3986 percent encoding).
 *
 * Unreserved chars (A-Za-z0-9-._~) pass through; others become %XX.
 * @return Result with encoded string (caller must free).
 */
ProvenStringResult proven_http_url_encode(const uint8_t* ptr, size_t len);
/**
 * @brief URL-decode a percent-encoded string.
 * @return Result with decoded string (caller must free).
 */
ProvenStringResult proven_http_url_decode(const uint8_t* ptr, size_t len);
/* ============================================================================
 * SafeUnit - Physical unit conversions (2 functions)
 * ============================================================================ */

/** @brief Length units. */
typedef enum {
    PROVEN_LENGTH_METERS      = 0,
    PROVEN_LENGTH_KILOMETERS  = 1,
    PROVEN_LENGTH_CENTIMETERS = 2,
    PROVEN_LENGTH_MILLIMETERS = 3,
    PROVEN_LENGTH_FEET        = 4,
    PROVEN_LENGTH_INCHES      = 5,
    PROVEN_LENGTH_MILES       = 6,
    PROVEN_LENGTH_YARDS       = 7
} ProvenLengthUnit;
/** @brief Temperature units. */
typedef enum {
    PROVEN_TEMP_CELSIUS    = 0,
    PROVEN_TEMP_FAHRENHEIT = 1,
    PROVEN_TEMP_KELVIN     = 2
} ProvenTempUnit;
/**
 * @brief Convert length between units.
 * @return PROVEN_ERR_INVALID_ARGUMENT for NaN input.
 */
ProvenFloatResult proven_unit_convert_length(double value, ProvenLengthUnit from, ProvenLengthUnit to);
/**
 * @brief Convert temperature between units.
 * @return PROVEN_ERR_OUT_OF_BOUNDS for temperatures below absolute zero.
 */
ProvenFloatResult proven_unit_convert_temp(double value, ProvenTempUnit from, ProvenTempUnit to);