bindings/idris2/src/Proven/FFI.idr


||| Evaluate arithmetic expression safely.
||| Supports +, -, *, /, parentheses, negative and decimal numbers.
||| Returns (status, result_value).
%foreign "C:proven_calculator_eval,libproven"
export
prim__proven_calculator_eval : String -> Int -> PrimIO (Int, Double)

-- ============================================================================
-- SafePassword (2 functions)
-- ============================================================================

||| Validate password strength.
||| Returns an opaque pointer to a ProvenPasswordResult struct.
%foreign "C:proven_password_validate,libproven"
export
prim__proven_password_validate : String -> Int -> PrimIO AnyPtr

||| Check if password is in common passwords list.
||| Returns non-zero if the password is common.
%foreign "C:proven_password_is_common,libproven"
export
prim__proven_password_is_common : String -> Int -> PrimIO Int

-- ============================================================================
-- SafeUnit (2 functions)
-- ============================================================================

||| Convert length between units.
||| Unit codes: 0=meters, 1=km, 2=cm, 3=mm, 4=feet, 5=inches, 6=miles, 7=yards.
||| Returns (status, converted_value).
%foreign "C:proven_unit_convert_length,libproven"
export
prim__proven_unit_convert_length : Double -> Int -> Int -> PrimIO (Int, Double)

||| Convert temperature between units.
||| Unit codes: 0=Celsius, 1=Fahrenheit, 2=Kelvin.
||| Returns (status, converted_value).
%foreign "C:proven_unit_convert_temp,libproven"
export
prim__proven_unit_convert_temp : Double -> Int -> Int -> PrimIO (Int, Double)

-- ============================================================================
-- SafeML (4 pure functions)
-- ============================================================================

||| Sigmoid function: 1 / (1 + exp(-x)). Pure.
%foreign "C:proven_ml_sigmoid,libproven"
export
prim__proven_ml_sigmoid : Double -> Double

||| ReLU function: max(0, x). Pure.
%foreign "C:proven_ml_relu,libproven"
export
prim__proven_ml_relu : Double -> Double

||| Leaky ReLU: x >= 0 ? x : alpha * x. Pure.
%foreign "C:proven_ml_leaky_relu,libproven"
export
prim__proven_ml_leaky_relu : Double -> Double -> Double

||| Clamp value to [min_val, max_val]. Pure.
%foreign "C:proven_ml_clamp,libproven"
export
prim__proven_ml_clamp : Double -> Double -> Double -> Double

-- ============================================================================
-- SafeHeader (3 functions)
-- ============================================================================

||| Check for CRLF injection in header value.
||| Returns (status, bool_value) where bool_value is non-zero if CRLF found.
%foreign "C:proven_header_has_crlf,libproven"
export
prim__proven_header_has_crlf : String -> Int -> PrimIO (Int, Int)

||| Check if header name is a valid token per RFC 7230.
||| Returns (status, bool_value).
%foreign "C:proven_header_is_valid_name,libproven"
export
prim__proven_header_is_valid_name : String -> Int -> PrimIO (Int, Int)

||| Check if header name is in the dangerous headers list.
||| Returns (status, bool_value).
%foreign "C:proven_header_is_dangerous,libproven"
export
prim__proven_header_is_dangerous : String -> Int -> PrimIO (Int, Int)

-- ============================================================================
-- SafeCookie (3 validation functions)
-- ============================================================================

||| Check for cookie injection characters (semicolon, CR, LF).
||| Returns (status, bool_value).
%foreign "C:proven_cookie_has_injection,libproven"
export
prim__proven_cookie_has_injection : String -> Int -> PrimIO (Int, Int)

||| Validate cookie name.
||| Returns (status, bool_value).
%foreign "C:proven_cookie_validate_name,libproven"
export
prim__proven_cookie_validate_name : String -> Int -> PrimIO (Int, Int)

||| Validate cookie value.
||| Returns (status, bool_value).
%foreign "C:proven_cookie_validate_value,libproven"
export
prim__proven_cookie_validate_value : String -> Int -> PrimIO (Int, Int)

-- ============================================================================
-- SafeHttp (2 functions)
-- ============================================================================

||| URL-encode a string (RFC 3986 percent encoding).
||| Returns (status, result_ptr, result_len). Caller must free result_ptr.
%foreign "C:proven_http_url_encode,libproven"
export
prim__proven_http_url_encode : String -> Int -> PrimIO (Int, AnyPtr, Int)

||| URL-decode a percent-encoded string.
||| Returns (status, result_ptr, result_len). Caller must free result_ptr.
%foreign "C:proven_http_url_decode,libproven"
export
prim__proven_http_url_decode : String -> Int -> PrimIO (Int, AnyPtr, Int)

-- ============================================================================
-- SafePhone (1 function)
-- ============================================================================

||| Parse phone number. Returns opaque pointer to ProvenPhoneResult.
%foreign "C:proven_phone_parse,libproven"
export
prim__proven_phone_parse : String -> Int -> PrimIO AnyPtr
